external-crates/move/crates/move-compiler/tests/move_check/expansion/invalid_unpack_assign_lhs_not_name.move
module 0x42::M {
    fun foo() {
        let _f = 0u64;
        0u64 { f } = 0;
    }
}
